Visual Fixes
* Visual fix to scrollbar.
* Visual fix to the Add Page button.

--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,14 @@ html
 body
 {
     width: 450px;
-    height: 355px;
+    height: 360px;
     overflow: hidden;
     font-family: "DroidSansMono", monospace;
 }
 
 #wallabags
 {
-    margin-top: 52px;
+    margin-top: 58px;
     height: 250px;
     overflow-y: auto;
 }
